--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driverClassName= org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://localhost:3306/project
+spring.datasource.url=jdbc:mariadb://ec2-15-164-48-78.ap-northeast-2.compute.amazonaws.com:3306/project
 spring.datasource.username=root
 spring.datasource.password=root1234
 # testMapper.xml 위치 지정
