--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driverClassName= org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://ec2-15-164-48-78.ap-northeast-2.compute.amazonaws.com:3306/project
 spring.datasource.username=root
-spring.datasource.password=root1234
+spring.datasource.password=park19960826
 # testMapper.xml 위치 지정
 # **은 하위 폴더 레벨에 상관없이 모든 경로를 뜻하며, *는 아무 이름이나 와도 된다는것을 뜻합니다
 
